added buttons for all other pages July 23rd 7pm

--- a/Home.html
+++ b/Home.html
@@ -15,9 +15,39 @@
   <body>
 
  <h1> Should Cost Tool</h1>     
- 
- <a href= "<?=ScriptApp.getService().getUrl();?>?v=sheet" class="btn waves-effect waves-light" type="submit" id="submit">Sheet Metal</a>
-           
+<!--Buttons --> 
+
+  <div class="row">
+    <div class="col s12">
+    <div> 
+     <a href= "<?=ScriptApp.getService().getUrl();?>?v=sheet" class="btn waves-effect waves-light" type="submit" id="submit">Sheet Metal</a>
+    </div> 
+   </div>
+</div>
+
+ <div class="row">
+    <div class="col s12">
+    <div>  
+     <a  class="btn waves-effect waves-light" type="submit" id="submit">Plastic</a>
+    </div>
+   </div>
+  </div>
+
+  <div class="row">
+    <div class="col s12">
+    <div>
+     <a  class=" btn waves-effect waves-light" type="submit" id="submit">Machined</a>
+    </div>
+   </div>
+  </div>
+
+ <div class="row">
+    <div class="col s12">
+    <div>
+     <a  class="btn waves-effect waves-light" type="submit" id="submit">PCB</a>
+    </div>
+   </div>
+  </div>    
 
    <script src="javascript.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
