--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
   <body>
   
 <!--retunr Home BUtton -->  
-  <div class="homeBtn">  
-         <a class="waves-effect waves-light btn-small"><i class="material-icons">home</i></a>
-             
+      <div class="homeBtn">  
+         <a href= "<?=ScriptApp.getService().getUrl();?>" class="waves-effect waves-light btn-small"><i class="material-icons">home</i></a>       
       </div>
   
 
