--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     
           <div class="row">
             <div class="input-field col s6">
-            <i class="material-icons prefix">account_balance_wallet</i>   
-              <input id="project" type="text"  class="validate">
-              <label for="project">Project: QMS-A-# </label>
+            <i class="material-icons prefix">reorder</i>   
+              <input id="partNumber" type="text"  class="validate">
+              <label for="partNumber">Part Number</label>
             </div>
           </div>
 
