Sheet Metal page, click on estimate it gets loaded in the google sheet, added "complete" button

--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,8 @@
                     <label for="project">Project </label>
                     <span class="helper-text" data-error="wrong" data-success="Enter project number and click on start">Format Q-IMS-#</span>
                   </div>
-                        <button class="startButton btn waves-effect waves-light">Start</button>
+                        <button class="startButton btn waves-effect waves-light">Start
+                        </button>
                 
             </div>
         </div>
