--- a/style.html
+++ b/style.html
@@ -4,7 +4,7 @@
     
     body{
     background-color: whitesmoke;
-    color: black|;
+    color: black;
     font-family: 'Noto Sans HK', sans-serif;
     
     }
@@ -110,6 +110,9 @@
   margin: 15px;
   }
  
+   .link{
+   text-decoration: underline;
+   }
 
 
 </style>
