--- a/sheetMetalHTML.html
+++ b/sheetMetalHTML.html
@@ -233,7 +233,7 @@
 
       
            
-<?!= include('clientGS'); ?>
+<?!= include('sheetMetalSCRIPT'); ?>
    <script src="javascript.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   
