Updating GoogleShjeet to count last row

--- a/sheetMetalHTML.html
+++ b/sheetMetalHTML.html
@@ -225,7 +225,7 @@
      </div>  
      
      <div class="finish">  
-         <a class=" btn waves-effect waves-light btn-small">Complete <i class="material-icons">cloud_done</i></a>       
+         <a class=" btn waves-effect waves-light btn-small" id="finishBtn">Complete <i class="material-icons">cloud_done</i></a>       
       </div>
                     
 
