--- a/sheetMetalSCRIPT.html
+++ b/sheetMetalSCRIPT.html
@@ -122,7 +122,7 @@ estimation.style.display = 'none';
   addMoreBTP.style.display = 'none';
 
 
-  var finish = document.querySelector('.finish');
+  var finish = document.querySelector('#finishBtn');
   finish.style.display = 'none';
   
  finish.addEventListener("click",()=>{
